# TravisLibTest

./: .travis.yml  CMakeLists.txt  README.md  before.sh  main.cpp  travisbuild.sh
